kubernetes/infrastructure/ingress/gateway/base/envoy-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-gateway-ha
    namespace: gateway
