kubernetes/infrastructure/ingress/gateway/base/gateway.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: gateway
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.timourhomelab.org"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: timourhomelab-wildcard-tls
        namespace: gateway
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.timourhomelab.org"
    allowedRoutes:
      namespaces:
        from: All
